# OC_P14_Finetunez_votre_propre_LLM

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
audit/: rgpd_report.md
configs/: presidio.yaml  sources.yaml  split.yaml
data/metadata/: dataset_card.json
data/processed/dpo/: test.jsonl  val.jsonl
data/processed/eval_clinique/: eval_clinique.jsonl
data/processed/sft/: test.jsonl  val.jsonl
notebooks/: 01_eda_sources.ipynb  02_presidio_tests.ipynb  03_dataset_stats.ipynb
scripts/: 01_collect.py  02_normalize.py  03_anonymize.py  04_split.py  05_validate.py  06_publish.py  07_push_to_hub.py
src/data_pipeline/: anonymizer.py  normalizer.py  splitter.py  validator.py
src/data_pipeline/collectors/: frenchmedmcqa_collector.py  mediqa_collector.py  medquad_collector.py  ultramedical_collector.py
