[project]
name = "oc-p14-finetunez-llm"
version = "0.1.0"
description = "POC agent IA triage médical - Fine-tuning SFT+DPO de Qwen3-1.7B (CHSA)"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.18",
    "huggingface-hub>=0.22",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "langdetect>=1.0.9",
    "transformers>=4.40",
    "torch>=2.2",
    "datasketch>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "notebook>=7.0",
    "ipywidgets>=8.0",
]
